compiler/lexer/tests/snapshots/snapshots__full_program.snap
---
source: compiler/lexer/tests/snapshots.rs
assertion_line: 6
expression: tokens
---
[
    SpannedToken {
        token: Let,
        span: Span {
            start: 0,
            end: 3,
        },
    },
    SpannedToken {
        token: Ident(
            "x",
        ),
        span: Span {
            start: 4,
            end: 5,
        },
    },
    SpannedToken {
        token: Eq,
        span: Span {
            start: 6,
            end: 7,
        },
    },
    SpannedToken {
        token: Int(
            42,
        ),
        span: Span {
            start: 8,
            end: 10,
        },
    },
    SpannedToken {
        token: Newline,
        span: Span {
            start: 10,
            end: 11,
        },
    },
    SpannedToken {
        token: Ident(
            "print",
        ),
        span: Span {
            start: 11,
            end: 16,
        },
    },
    SpannedToken {
        token: LParen,
        span: Span {
            start: 16,
            end: 17,
        },
    },
    SpannedToken {
        token: Ident(
            "x",
        ),
        span: Span {
            start: 17,
            end: 18,
        },
    },
    SpannedToken {
        token: RParen,
        span: Span {
            start: 18,
            end: 19,
        },
    },
    SpannedToken {
        token: Eof,
        span: Span {
            start: 19,
            end: 19,
        },
    },
]
