compiler/lexer/tests/snapshots/snapshots__operators.snap
---
source: compiler/lexer/tests/snapshots.rs
assertion_line: 18
expression: tokens
---
[
    SpannedToken {
        token: Int(
            1,
        ),
        span: Span {
            start: 0,
            end: 1,
        },
    },
    SpannedToken {
        token: Plus,
        span: Span {
            start: 2,
            end: 3,
        },
    },
    SpannedToken {
        token: Int(
            2,
        ),
        span: Span {
            start: 4,
            end: 5,
        },
    },
    SpannedToken {
        token: Star,
        span: Span {
            start: 6,
            end: 7,
        },
    },
    SpannedToken {
        token: Int(
            3,
        ),
        span: Span {
            start: 8,
            end: 9,
        },
    },
    SpannedToken {
        token: EqEq,
        span: Span {
            start: 10,
            end: 12,
        },
    },
    SpannedToken {
        token: Int(
            7,
        ),
        span: Span {
            start: 13,
            end: 14,
        },
    },
    SpannedToken {
        token: And,
        span: Span {
            start: 15,
            end: 18,
        },
    },
    SpannedToken {
        token: True,
        span: Span {
            start: 19,
            end: 23,
        },
    },
    SpannedToken {
        token: Eof,
        span: Span {
            start: 23,
            end: 23,
        },
    },
]
